antes de ejecutar el comando git rm -r --cached

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <input type="text" id="director" name="director" required><br><br>
 
                 <label for="duracion">Año:</label>
-                <input type="number" id="anio" name="duracion" required><br><br>
+                <input type="number" id="anio" name="anio" required><br><br>
 
             </fieldset>
             <button type="submit">Guardar Película</button>
