--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <button id="botonEliminar" title="Introduce el título de la película y pulsa el botón">Eliminar Película</button>
         </div>   
         <br>
-        <a href="http://localhost:3000/movies" class="listado">Ver listado de películas</a>
+        <a href="http://localhost:3000/api/movies" class="listado">Ver listado de películas</a>
         
     </body>
     <script>
